<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_start_cl_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_start_tv_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="sraka"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/activity_start_btn_toBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_start_btn_toBuy_text"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_start_tv_textView" />

    <Button
        android:id="@+id/activity_start_btn_shoppingLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activity_start_btn_shoppingLists_text"
        app:layout_constraintTop_toBottomOf="@+id/activity_start_btn_toBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
/>


    <Button
        android:id="@+id/activity_start_btn_granary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activity_start_btn_granary_text"
        app:layout_constraintTop_toBottomOf="@+id/activity_start_btn_shoppingLists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>