<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_granary_item_tv_price_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/activity_shopping_lists_item_tv_price_header_text" />

        <TextView
            android:id="@+id/activity_granary_item_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_granary_item_tv_expiry_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/activity_shopping_lists_item_tv_expiry_date_header_text" />

        <TextView
            android:id="@+id/activity_granary_item_tv_expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_granary_item_tv_quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/activity_shopping_lists_item_tv_quantity_header_text" />

        <TextView
            android:id="@+id/activity_granary_item_tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_granary_item_tv_volume_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/activity_shopping_lists_item_tv_volume_header_text" />

        <TextView
            android:id="@+id/activity_granary_item_tv_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>



</TableLayout>
