<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_shopping_lists_item_tv_name_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="end|center_vertical"
            android:layout_weight="1"
            android:text="@string/activity_shopping_lists_item_tv_price_name_text" />

        <EditText
            android:id="@+id/activity_shopping_lists_item_dialog_et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_shopping_lists_item_tv_price_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="end|center_vertical"
            android:layout_weight="1"
            android:text="@string/activity_shopping_lists_item_tv_price_header_text" />

        <EditText
            android:id="@+id/activity_shopping_lists_item_dialog_et_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_shopping_lists_item_tv_expiry_date_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="end|center_vertical"
            android:text="@string/activity_shopping_lists_item_tv_expiry_date_header_text" />

        <EditText
            android:id="@+id/activity_shopping_lists_item_dialog_et_expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            android:inputType="none"
            android:focusable="false" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_shopping_lists_item_tv_quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="end|center_vertical"
            android:text="@string/activity_shopping_lists_item_tv_quantity_header_text" />

        <EditText
            android:id="@+id/activity_shopping_lists_item_dialog_et_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/activity_shopping_lists_item_tv_volume_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="end|center_vertical"
            android:text="@string/activity_shopping_lists_item_tv_volume_header_text" />

        <EditText
            android:id="@+id/activity_shopping_lists_item_dialog_et_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1" />
    </TableRow>



</TableLayout>
